fix: some bugs with keys getting stuck

--- a/style.css
+++ b/style.css
@@ -17,10 +17,8 @@ textarea:focus {
 }
 
 .key {
-    /* width: calc(100%/20); */
     width: 50px;
     padding: 5px;
-    /* flex-basis: 50px; */
     height: 50px;
     background-color: darkgray;
     color: white;
@@ -75,6 +73,11 @@ textarea:focus {
 }
 
 .green {
-    background-color: green;
+    background-color: lightgreen;
 }
 
+.status-bar {
+    width: 950px;
+    display: flex;
+    justify-content: space-around;
+}
